<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">smsSend</string>
    <string name="please_input_number">请输入手机号</string>
    <string name="action_settings">Settings</string>
    <string name="default_number">10086</string>
    <string name="please_input_content">请输入短信内容</string>
    <string name="bt_send">发送</string>
    <string name="et_content_hint">我爱你</string>

</resources>