<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.smssend.MainActivity" >

    <TextView
        android:id="@+id/tv_please_input_number"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/please_input_number" />

    <EditText
        android:id="@+id/et_number"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_please_input_number"
        android:hint="@string/default_number"
        android:inputType="phone"
        android:singleLine="true" >
    </EditText>

    <TextView
        android:id="@+id/tv_please_input_content"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_number"
        android:text="@string/please_input_content" />

    <EditText
        android:id="@+id/et_content"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_please_input_content"
        android:hint="@string/et_content_hint"
        android:inputType="textMultiLine"
        android:lines="5" >
    </EditText>

    <Button
        android:id="@+id/bt_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_content"
        android:text="@string/bt_send" />

</RelativeLayout>